--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@tsconfig/recommended/tsconfig.json",
-  "include": ["day/**/*.ts"]
+  "include": ["day/**/*.ts", "utils/**/*.ts"]
 }
