Unsuccessful day 11 part 2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@tsconfig/node22/tsconfig.json",
+  "compilerOptions": {
+    "sourceMap": true
+  },
   "include": ["day/**/*.ts", "utils/**/*.ts"]
 }
